<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ぼっちめし図鑑</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="eat_log">食べログ</string>
    <string name="eval_comment">コメント</string>
    <string name="ate">食べた！</string>
    <string name="budget">予算</string>
    <string name="detail">詳細</string>
    <string name="list_btn">List</string>
    <string name="rst_detail_top">の詳細</string>
    <string name="rst_detail_name">レストラン名</string>
    <string name="rst_detail_tabelog">食べログ</string>
    <string name="rst_detail_category">カテゴリ</string>
    <string name="rst_detail_dinner">晩の予算</string>
    <string name="rst_detail_lunch">昼の予算</string>
    <string name="rst_detail_situation">利用場面</string>
    <string name="rst_detail_address">住所</string>
    <string name="rst_detail_station">最寄り駅</string>
    <string name="rst_detail_tel">電話番号</string>
    <string name="rst_detail_businesshour">営業時間</string>
    <string name="rst_detail_holiday">休日</string>
    <string name="setting_title">設定</string>
    <string name="setting_change">名前を変更します</string>
    <string name="default_username">名無しの権兵衛</string>
    <string name="lisence">※ 免責事項</string>
    <string name="setting_username_title">お一人様のお名前</string>

</resources>